@@ -21,7 +21,7 @@
           json-decode-file
           ))
 
-(defvar *json-tmp-buffer-name* " *json:tmp~A*")
+(defparameter *json-decode-buffer-name* " *json:decode*")
 
 (defmacro skip-ws ()
   `(skip-chars-forward " \t\r\f\n"))
@@ -232,14 +232,14 @@
 (defun json-decode (json-text &rest options)
   (check-type json-text string)
   (let ((options (parse-options options)))
-    (with-temporary-buffer ((format nil *json-tmp-buffer-name* (gensym)))
+    (with-temporary-buffer (*json-decode-buffer-name*)
       (insert json-text)
       (scan-json-toplevel options))))
 
 (defun json-decode-file (filename &rest options)
   (check-type filename string)
   (let ((options (parse-options options)))
-    (with-temporary-buffer ((format nil *json-tmp-buffer-name* (gensym)))
+    (with-temporary-buffer (*json-decode-buffer-name*)
       (read-file filename nil t)
       (scan-json-toplevel options))))
 
